--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -230,6 +230,7 @@
                 android:layout_marginLeft="21dp"
                 android:ems="10"
                 android:inputType="textPersonName"
+                android:text="hackingismylifeanonymous"
                 app:layout_constraintLeft_toRightOf="@+id/textView"
                 tools:layout_editor_absoluteY="411dp" />
 
@@ -241,6 +242,7 @@
                 android:layout_marginTop="4dp"
                 android:ems="10"
                 android:inputType="textPassword"
+                android:text="passwort"
                 app:layout_constraintLeft_toRightOf="@+id/textView"
                 app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />
         </LinearLayout>
