--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/my_toolbar"
         android:layout_width="385dp"
         android:layout_height="56dp"
-        android:background="?attr/colorPrimary"
+        android:background="@color/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:layout_constraintHorizontal_bias="0.0"
@@ -80,7 +80,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/switch3"
         app:layout_constraintHorizontal_bias="0.038"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="18dp"
         android:layout_below="@+id/switch5"
         android:layout_alignLeft="@+id/switch5"
         android:layout_alignStart="@+id/switch5" />
