--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
     <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="508dp"
+        android:layout_height="match_parent"
         android:layout_below="@+id/my_toolbar" />
 
     <com.roughike.bottombar.BottomBar
