--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,10 +5,18 @@
     tools:context="com.haayhappen.instafarm.SettingsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/fragment1"
-        android:textSize="50sp" />
+        android:text="@string/lorem_ipsum"
+        android:textSize="50sp" >
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/lorem_ipsum"
+            android:textSize="50sp" />
+    </ScrollView>
 
 </FrameLayout>
