--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -64,7 +64,7 @@
                 tools:layout_editor_absoluteY="16dp" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/beitraegetextview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -104,8 +104,8 @@
                 android:layout_marginTop="0dp"
                 android:text="Abonnenten"
                 app:layout_constraintHorizontal_bias="0.571"
-                app:layout_constraintLeft_toRightOf="@+id/textView2"
-                app:layout_constraintRight_toLeftOf="@+id/textView4"
+                app:layout_constraintLeft_toRightOf="@+id/beitraegetextview"
+                app:layout_constraintRight_toLeftOf="@+id/abonnierttextview"
                 app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
 
@@ -125,7 +125,7 @@
                 tools:layout_editor_absoluteY="17dp" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/abonnierttextview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
