--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,11 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@android:color/white"
     tools:context="com.haayhappen.instafarm.ProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/profileimageview"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginLeft="16dp"
@@ -41,7 +42,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/beiträgecount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="47"
@@ -52,7 +53,7 @@
                 tools:layout_editor_absoluteY="16dp" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/beitraegetextview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -75,7 +76,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/abonnentencount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="3007"
@@ -86,7 +87,7 @@
                 tools:layout_editor_absoluteY="16dp" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/abonnententextview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -98,8 +99,8 @@
                 android:textAlignment="center"
                 android:textSize="18sp"
                 app:layout_constraintHorizontal_bias="0.571"
-                app:layout_constraintLeft_toRightOf="@+id/textView2"
-                app:layout_constraintRight_toLeftOf="@+id/textView4"
+                app:layout_constraintLeft_toRightOf="@+id/beitraegetextview"
+                app:layout_constraintRight_toLeftOf="@+id/abonnierttextview"
                 app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
 
@@ -110,7 +111,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/abonniertcount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="322"
@@ -121,7 +122,7 @@
                 tools:layout_editor_absoluteY="17dp" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/abonnierttextview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -138,16 +139,16 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView16"
+        android:id="@+id/profiletextview"
         android:layout_width="256dp"
         android:layout_height="42dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="45dp"
         android:text="fynniputzii"
         android:textAlignment="center"
         android:textSize="32sp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
